<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.homework1.MainActivity">



    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:indeterminate="false"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:max="5"
        android:progress="3"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView1"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/seekBar"
        android:layout_toEndOf="@+id/seekBar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculate"
        android:id="@+id/button"
        android:height="50dp"
        android:width="150dp"
        android:onClick="calculate"

        android:layout_gravity="left"

        android:layout_marginTop="27dp"
        android:layout_below="@+id/switch1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:width="150dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:id="@+id/button2"

        android:layout_alignTop="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Tip"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Budget"
        android:id="@+id/textView3"
        android:width="120dp"
        android:height="50dp"
        android:padding="10dp"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:width="180dp"
        android:padding="10dp"
        android:textSize="18dp"
        android:hint="Enter dollar amount"
        android:inputType="numberDecimal"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_above="@+id/radioGroup2"
        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GB2"
            android:id="@+id/radioButton1"
            android:checked="true"
            android:layout_below="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:layout_alignEnd="@+id/textView3" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GB4"
            android:id="@+id/radioButton2"
            android:checked="false"
            android:layout_alignTop="@+id/radioButton1"
            android:layout_toRightOf="@+id/radioButton1"
            android:layout_toEndOf="@+id/radioButton1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GB8"
            android:id="@+id/radioButton3"
            android:checked="false"
            android:layout_alignTop="@+id/radioButton2"
            android:layout_toRightOf="@+id/radioButton2"
            android:layout_toEndOf="@+id/radioButton2" />

        <RadioButton
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:text="@string/GB16"
            android:id="@+id/radioButton4"
            android:checked="false"
            android:layout_alignTop="@+id/radioButton3"
            android:layout_toRightOf="@+id/radioButton3"
            android:layout_toEndOf="@+id/radioButton3" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Memory"
        android:padding="5dp"
        android:textSize="18dp"
        android:id="@+id/textView4"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Storage"
        android:padding="2dp"
        android:textSize="18dp"
        android:layout_toLeftOf="@id/radioGroup2"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/radioGroup2">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GB250"
            android:textSize="14dp"
            android:id="@+id/radioButton5"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GB500"
            android:textSize="14dp"
            android:id="@+id/radioButton6"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GB750"
            android:textSize="14dp"
            android:id="@+id/radioButton7"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TB1"
            android:textSize="14sp"
            android:id="@+id/radioButton8"
            android:checked="false" />

    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mouse"
        android:id="@+id/checkBox"
        android:checked="false"
        android:layout_below="@+id/radioGroup2"
        android:layout_alignLeft="@+id/checkBox3"
        android:layout_alignStart="@+id/checkBox3" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FlashDrive"
        android:id="@+id/checkBox2"
        android:checked="false"
        android:layout_above="@+id/checkBox4"
        android:layout_alignLeft="@+id/checkBox4"
        android:layout_alignStart="@+id/checkBox4" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CoolingPad"
        android:id="@+id/checkBox3"
        android:checked="false"
        android:layout_below="@+id/checkBox"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CarryCase"
        android:id="@+id/checkBox4"
        android:checked="false"
        android:layout_alignTop="@+id/checkBox3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="120dp"
        android:height="40dp"
        android:padding="2dp"
        android:text="@string/Accessories"
        android:id="@+id/textView6"
        android:textSize="16dp"
        android:layout_alignBaseline="@+id/checkBox"
        android:layout_alignBottom="@+id/checkBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delivery"
        android:id="@+id/switch1"
        android:checked="true"
        android:layout_below="@+id/seekBar"
        android:layout_toRightOf="@+id/linearLayout"
        android:layout_toEndOf="@+id/linearLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Price"
        android:padding="10dp"
        android:textSize="30dp"
        android:height="60dp"
        android:width="200dp"
        android:id="@+id/textView7"
        android:layout_below="@+id/button"
        android:layout_alignRight="@+id/checkBox"
        android:layout_alignEnd="@+id/checkBox"
        android:layout_alignLeft="@+id/radioGroup2"
        android:layout_alignStart="@+id/radioGroup2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:padding="10dp"
        android:textSize="30dp"
        android:height="60dp"
        android:width="200dp"
        android:text="@string/intial"
        android:layout_below="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/YourStatus"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView7"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_alignBottom="@+id/textView10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:width="120dp"

        android:textSize="20dp"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView7"
        android:layout_toRightOf="@+id/textView9"
        android:layout_alignRight="@+id/seekBar"
        android:layout_alignEnd="@+id/seekBar"
        android:textIsSelectable="false"
        android:background="@drawable/round_corner"/>

</RelativeLayout>
